added comment on data card

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Memory Game</h1>
     <div class="wrapper">
+        <!-- data-card is the custom attribute name  -->
         <div class="card" data-card="A">
             <div class="front">?</div>
             <div class="back">A</div>
