added the animation of win

--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
             <div class="back">D</div>
         </div>
     </div>
+
+    <!-- Added a You Win message -->
+<div id="winMessage" class="win-message">
+    <h1>You Win!</h1>
+</div>
+
     <button id="restart">Restart Game</button>
     <script src="script.js"></script>
 
