Added some more elements, made responsive, more functions of animations

--- a/index.html
+++ b/index.html
@@ -42,6 +42,41 @@
             <div class="front">?</div>
             <div class="back">D</div>
         </div>
+
+
+        <div class="card" data-card="E">
+            <div class="front">?</div>
+            <div class="back">E</div>
+        </div>
+        <div class="card" data-card="F">
+            <div class="front">?</div>
+            <div class="back">F</div>
+        </div>
+        <div class="card" data-card="G">
+            <div class="front">?</div>
+            <div class="back">G</div>
+        </div>
+        <div class="card" data-card="H">
+            <div class="front">?</div>
+            <div class="back">H</div>
+        </div>
+        <div class="card" data-card="E">
+            <div class="front">?</div>
+            <div class="back">E</div>
+        </div>
+        <div class="card" data-card="F">
+            <div class="front">?</div>
+            <div class="back">F</div>
+        </div>
+        <div class="card" data-card="G">
+            <div class="front">?</div>
+            <div class="back">G</div>
+        </div>
+        <div class="card" data-card="H">
+            <div class="front">?</div>
+            <div class="back">H</div>
+        </div>
+    
     </div>
 
     <!-- Added a You Win message -->
