--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Memory Game</h1>
+
+    <div id="score">Attempts Left: 25/25</div>
+
     <div class="wrapper">
         <!-- data-card is the custom attribute name  -->
         <div class="card" data-card="A">
@@ -82,6 +85,10 @@
     <!-- Added a You Win message -->
 <div id="winMessage" class="win-message">
     <h1>You Win!</h1>
+</div>
+
+<div id="looseMessage" class="lm">
+    <h1>You Lost!</h1>
 </div>
 
     <button id="restart">Restart Game</button>
